Magick.NET.Native/MagickImage.h


MAGICK_NET_EXPORT Image *MagickImage_Create(const ImageInfo *, ExceptionInfo **);


MAGICK_NET_EXPORT void MagickImage_Dispose(Image *);


MAGICK_NET_EXPORT PixelInfo *MagickImage_AlphaColor_Get(const Image *);

MAGICK_NET_EXPORT void MagickImage_AlphaColor_Set(Image *, const PixelInfo *);


MAGICK_NET_EXPORT void MagickImage_Segment(Image *, const size_t, const double, const double, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_SelectiveBlur(Image *, const double, const double, const double, const size_t, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_Separate(Image *, const size_t, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_SepiaTone(Image *, const double, ExceptionInfo **);


MAGICK_NET_EXPORT void MagickImage_SetAlpha(Image *, const size_t, ExceptionInfo **);


MAGICK_NET_EXPORT void MagickImage_SetArtifact(Image *, const char *, const char *);


MAGICK_NET_EXPORT void MagickImage_SetAttribute(Image *, const char *, const char *, ExceptionInfo **);


MAGICK_NET_EXPORT void MagickImage_SetBitDepth(Image *, const size_t, const size_t, ExceptionInfo **);


MAGICK_NET_EXPORT void MagickImage_SetColormap(Image *, const size_t, const PixelInfo *, ExceptionInfo **);


MAGICK_NET_EXPORT MagickBooleanType MagickImage_SetColorMetric(Image *, const Image *, ExceptionInfo **);


MAGICK_NET_EXPORT void MagickImage_SetNext(Image *, Image *);


MAGICK_NET_EXPORT void MagickImage_SetProgressDelegate(Image *, const MagickProgressMonitor);


MAGICK_NET_EXPORT Image *MagickImage_Shade(Image *, const double, const double, const MagickBooleanType, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_Shadow(Image *, const ssize_t, const ssize_t, const double, const double, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_Sharpen(Image *, const double, const double, const size_t, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_Shave(const Image *, const size_t, const size_t, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_Shear(const Image *, const double, const double, ExceptionInfo **);


MAGICK_NET_EXPORT void MagickImage_SigmoidalContrast(Image *, const MagickBooleanType, const double, const double, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_SparseColor(Image *, const size_t, const size_t, const double *, const size_t, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_Spread(const Image *, const size_t, const double, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_Sketch(Image *, const double, const double, const double, ExceptionInfo **);


MAGICK_NET_EXPORT void MagickImage_Solarize(Image *, const double, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_Splice(const Image *, const RectangleInfo *, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_Statistic(const Image *, const size_t, const size_t, const size_t, ExceptionInfo **);


MAGICK_NET_EXPORT ChannelStatistics *MagickImage_Statistics(Image *, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_Stegano(const Image *, const Image *, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_Stereo(const Image *, const Image *, ExceptionInfo **);


MAGICK_NET_EXPORT void MagickImage_Strip(Image *, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_SubImageSearch(Image *, const Image *, const size_t, const double, RectangleInfo *, double *, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_Swirl(const Image *, const size_t, const double, ExceptionInfo **);


MAGICK_NET_EXPORT void MagickImage_Texture(Image *, const Image *, ExceptionInfo **);


MAGICK_NET_EXPORT void MagickImage_Threshold(Image *, const double, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_Thumbnail(const Image *, const char *, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_Tint(const Image *, const char *, const PixelInfo *, ExceptionInfo **);


MAGICK_NET_EXPORT void MagickImage_Transparent(Image *, const PixelInfo *, const MagickBooleanType, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_Transpose(Image *, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_Transverse(Image *, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_Trim(Image *, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_UniqueColors(const Image *, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_UnsharpMask(Image *, const double, const double, const double, const double, const size_t, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_Vignette(const Image *, const double, const double, const ssize_t, const ssize_t, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_Wave(const Image *, const size_t, const double, const double, ExceptionInfo **);


MAGICK_NET_EXPORT void MagickImage_WhiteThreshold(Image *, const char *, const size_t, ExceptionInfo **);


MAGICK_NET_EXPORT unsigned char *MagickImage_WriteBlob(Image *, const ImageInfo *, size_t *, ExceptionInfo **);


MAGICK_NET_EXPORT void MagickImage_WriteFile(Image *, const ImageInfo *, ExceptionInfo **);